--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,16 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0"
+def getGitHash = { ->
+	def stdout = new ByteArrayOutputStream()
+	exec {
+		commandLine 'git', 'rev-parse', '--short', 'HEAD'
+		standardOutput = stdout
+	}
+	return stdout.toString().trim()
+}
+
+version = "1.0"+"-SNAPSHOT_"+getGitHash()
 group = "com.lcm.doctorwho"
 archivesBaseName = "lcm-doctorwho"
 
